updated log path

--- a/datadog/conf.d/python.d/conf.yaml
+++ b/datadog/conf.d/python.d/conf.yaml
@@ -9,7 +9,7 @@ logs:
     #   tags: (optional) add tags to each log collected
 
   - type: file
-    path: /path/to/your/python/log.log
+    path: /var/log/walktime.log
     service: walktime
     source: python
     sourcecategory: sourcecode
